--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,23 @@
-.App {
-  text-align: center;
+/* Google Font Awesome Link */
+@import url("https://fonts.googleapis.com/css2?family=Besley:ital,wght@0,400;1,400;1,500&display=swap");
+/* Global Variable */
+:root {
+    --main : #f10b0b;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+* {
+    font-family: "Besley" , serif;
+    transition: 0.2s;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+*::selection{
+    background-color: var(--main);
+    color: #fff !important;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+html::-webkit-scrollbar{
+    width: 10px;
 }
-
-.App-link {
-  color: #61dafb;
+html::-webkit-scrollbar-thumb{
+    background: var(--main);
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+html::-webkit-scrollbar-track{
+    background: #000;
 }
